MODSOURCE-747 - Do not process event if JobExecution status is Cancelled (#710)
* Added check to skip event processing if event relates to cancelled job

* Added logic to skip event with chunk of parsed records if job is cancelled