@@ -24,6 +24,7 @@ import org.folio.rest.jaxrs.model.Metadata;
 import org.folio.rest.jaxrs.model.RecordCollection;
 import org.folio.rest.jaxrs.model.RecordsBatchResponse;
 import org.folio.services.RecordService;
+import org.folio.services.caches.CancelledJobsIdsCache;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
@@ -31,7 +32,7 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 
 import static org.folio.rest.jaxrs.model.DataImportEventTypes.DI_PARSED_RECORDS_CHUNK_SAVED;
 import static org.folio.services.util.EventHandlingUtil.constructModuleName;
@@ -52,21 +53,26 @@ public class ParsedRecordChunksKafkaHandler implements AsyncRecordHandler<String
   private Vertx vertx;
   private KafkaConfig kafkaConfig;
   private final SimpleKafkaProducerManager producerManager;
+  private final CancelledJobsIdsCache cancelledJobsIdCache;
 
   // TODO: refactor srs.kafka.ParsedRecordChunksKafkaHandler
   @Value("${srs.kafka.ParsedRecordChunksKafkaHandler.maxDistributionNum:100}")
   private int maxDistributionNum;
 
-  public ParsedRecordChunksKafkaHandler(@Autowired RecordService recordService,
-                                        @Autowired Vertx vertx,
-                                        @Autowired KafkaConfig kafkaConfig) {
+  @Autowired
+  public ParsedRecordChunksKafkaHandler(RecordService recordService,
+                                        CancelledJobsIdsCache cancelledJobsIdsCache,
+                                        Vertx vertx,
+                                        KafkaConfig kafkaConfig) {
     this.recordService = recordService;
+    this.cancelledJobsIdCache = cancelledJobsIdsCache;
     this.vertx = vertx;
     this.kafkaConfig = kafkaConfig;
-    producerManager = new SimpleKafkaProducerManager(Vertx.currentContext().owner(), kafkaConfig);
+    producerManager = new SimpleKafkaProducerManager(vertx, kafkaConfig);
   }
 
   @Override
+  @SuppressWarnings("squid:S2629")
   public Future<String> handle(KafkaConsumerRecord<String, byte[]> targetRecord) {
     LOGGER.trace("handle:: Handling kafka record: {}", targetRecord);
     String jobExecutionId = extractHeaderValue(JOB_EXECUTION_ID_HEADER, targetRecord.headers());
@@ -76,6 +82,12 @@ public class ParsedRecordChunksKafkaHandler implements AsyncRecordHandler<String
     String key = targetRecord.key();
 
     try {
+      if (cancelledJobsIdCache.contains(jobExecutionId)) {
+        LOGGER.info("handle:: Skipping processing of event, topic: '{}', jobExecutionId: '{}' because the job has been cancelled",
+          targetRecord.topic(), jobExecutionId);
+        return Future.succeededFuture(targetRecord.key());
+      }
+
       Event event = DatabindCodec.mapper().readValue(targetRecord.value(), Event.class);
       RecordCollection recordCollection = Json.decodeValue(event.getEventPayload(), RecordCollection.class);
 
@@ -127,7 +139,7 @@ public class ParsedRecordChunksKafkaHandler implements AsyncRecordHandler<String
 
     producer.send(targetRecord)
       .<Void>mapEmpty()
-      .eventually(x -> producer.close())
+      .eventually((Supplier<Future<Void>>) producer::close)
       .onSuccess(res -> {
         String chunkId = extractHeaderValue(CHUNK_ID_HEADER, commonRecord.headers());
         LOGGER.debug("sendBackRecordsBatchResponse:: RecordCollection processing has been completed with response sent... event: '{}', chunkId: '{}', chunkNumber '{}'-'{}'",
@@ -149,7 +161,7 @@ public class ParsedRecordChunksKafkaHandler implements AsyncRecordHandler<String
           String content = ParsedRecordDaoUtil.normalizeContent(targetRecord.getParsedRecord());
           targetRecord.getParsedRecord().withContent(content);
         }
-      }).collect(Collectors.toList()));
+      }).toList());
   }
 
   private void setUserMetadata(RecordCollection recordCollection, String userId) {
